wordpress/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress

spec:
  replicas: 2
  selector:
    matchLabels:
      app: wordpress
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
        - image: wordpress:6.2.1-apache
          name: wordpress
          volumeMounts:
            - name: wordpress-pv
              mountPath: /var/www/html
      volumes:
        - name: wordpress-pv
          persistentVolumeClaim:
            claimName: wp-pv-claim
