wordpress/service.yml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
spec:
  selector:
    app: wordpress
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
