wordpress/ingress-wp-admin.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-admin
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth-wp-admin
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
spec:
  ingressClassName: nginx
  rules:
    - host: "vador-fans.lan"
      http:
        paths:
          - pathType: Prefix
            path: "/wp-admin"
            backend:
              service:
                name: wordpress
                port:
                  number: 80
