wordpress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-public
spec:
  ingressClassName: nginx
  rules:
    - host: "vador-fans.lan"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: wordpress
                port:
                  number: 80
